// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider it should pass in a custom prop 1`] = `
<hr
  aria-hidden="true"
  className="divider"
  id="testDivider"
/>
`;

exports[`Divider it should pass in a string of text 1`] = `
<div
  className="divider-container"
>
  <span
    className="divider-text"
  >
    Divider Test String
  </span>
</div>
`;

exports[`Divider should render a basic component 1`] = `
<hr
  aria-hidden="true"
  className="divider"
/>
`;
